<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginVertical="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_deadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:textStyle="bold"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:layout_marginVertical="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_empty_state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_deadline"
            >

            <ImageView
                android:id="@+id/iv_empty_state"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/svg_empty_file"
                />
            <TextView
                android:id="@+id/tv_empty_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_empty_state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/no_tasks_found"
                android:textColor="@color/black"
                android:textSize="24sp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_items"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="6dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_swipe_detail"
            tools:itemCount="4"
            app:layout_constraintTop_toBottomOf="@id/tv_deadline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_archive"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="24dp"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/svg_plus"
            app:tint="@color/white"
            android:backgroundTint="@color/pink"
            android:contentDescription="@string/all_files" />

        <Button
            android:id="@+id/btn_archive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_archive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add_task"
            app:layout_constraintBottom_toTopOf="@id/btn_active"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="@color/dark_blue"
            />

        <Button
            android:id="@+id/btn_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_active"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add_task"
            app:layout_constraintBottom_toTopOf="@id/btn_complete"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="@color/dark_blue"
            />

        <Button
            android:id="@+id/btn_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_complete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add_task"
            app:layout_constraintBottom_toTopOf="@id/btn_delete"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="@color/dark_blue"
            />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add_task"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="@color/chili_red"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>