<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/add_new_item"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/title"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/description"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_title" />

        <Spinner
            android:id="@+id/cat_spinner"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_description"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cat_spinner"
            >

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/input_date"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:paddingVertical="6dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_time"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_time"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:paddingVertical="6dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_date"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="Please fill all the fields"
            android:textColor="@color/chili_red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_date" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_error" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="12dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/tv_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>